	- compile for XBOX 
- Direc3D9
	- fixed crash on RTT Textures DepthBuffer freed twice.
		added deleteAllTextures to destuctor
- NullDriver
	- removeallTextures. added setMaterial ( SMaterial() ) to clean pointers for freed textures	
-------------------------------------------------------------------------------

Changes in version 1.6

 - New scene parameter B3D_LOADER_IGNORE_MIPMAP_FLAG to ignore the often missing mipmap flag in b3d files. If this parameter is true, the old pre Irrlicht-1.5 behavior is restored.

 - Added Mipmap LOD Bias attribute to MaterialLayer.

 - Added ColorMask support to selectively disable color planes on rendering.

 - Added support for all available depth test functions.

 - Add an outNode to getCollisionPoint() that returns the scene node that was hit, as well as the triangle.

 - Initial support for Alpha To Coverage, needs some more fixing until it works on all supported platforms.

 - Added support for Anti-Aliasing modes per material

 - Added an ICollisionCallback to ISceneNodeAnimatorCollisionResponse, to inform the application that a collision has occured.  Thanks to garrittg for this.

 - Added an startPosition parameter to createFlyCircleAnimator() to allow starting the animator at any position on the circle.

 - Many uses of dimension2d<s32> changed to dimension2d<u32>, including IImage, ITexture and screen dimensions.  You will have to change (at least) createDevice() calls to use dimension2d<u32>

 - Added Doublebuffer flag to SIrrCreationParameters, for better finetuning

 - Added Stereo-Framebuffer support for professional OpenGL cards

 - Added IFileSystem::createMemoryWriteFile() to allow creation of an IWriteFile interface that uses an application supplied memory buffer.

 - Added an IVideoDriver::writeImageToFile() overload that can take an IWriteFile interface.

 - (Internal) Replaced CMemoryReadFile with CMemoryFile, that also implements an IWriteFile interface.
